--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -6,8 +6,8 @@
     <title></title>
 </head>
 <body>
-    <p> git commit</p>
-    <p> git hub</p>
+ <p>Azure Deveops Example</p>
+    <p>Example</p>
 
 </body>
 </html>
